<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/xpl"
        android:textColor="#000000"
        android:textSize="24sp"
        android:labelFor="@id/editTextNumberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/xmin"
        android:textColor="#000000"
        android:textSize="24sp"
        android:labelFor="@id/editTextNumberDecimal2"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimal"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/q10_start"
        android:textColor="#000000"
        android:textSize="24sp"
        android:labelFor="@id/editTextNumberDecimal3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextNumberDecimal3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/top"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:labelFor="@id/editTextNumberDecimal4"
        android:text="@string/x_max"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3" />

    <EditText
        android:id="@+id/editTextNumberDecimal4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:autofillHints=""
        android:text="@string/empty"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/measur"
        android:onClick="ClickStart"
        android:backgroundTint="#194019"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/q10"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:text="@string/textview3"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/textview3"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/textview3"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/textview2"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <CheckBox
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/left_side"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimal4"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal4" />

</androidx.constraintlayout.widget.ConstraintLayout>